--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,27 +1,17 @@
 @import "bootstrap";
 
 body {
-    padding-bottom: 100px;
+    padding-bottom: 200px;
 }
 
-h1 {
-    font-family: apple-system,Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans", "Helvetica Neue", sans-serif;
-    color: rgba(0,0,0,.84);
-    font-size: 2em;
-    margin: 0.67em 0;
-}
-
-h4 {
-    font-family: apple-system,Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 16px;
+h6 {
     font-weight: 400;
     color: rgba(0,0,0,.68);
-    font-weight: normal;
 }
 
 p, li {
     font-family: Georgia, Cambria, "Times New Roman", serif;
-    font-size: 21px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 1.58;
     color: rgba(0,0,0,.84);
@@ -29,4 +19,9 @@ p, li {
 
 p {
     margin-top: 29px;
+}
+
+label {
+    font-size: 16px;
+    font-weight: 700;
 }
